# pipewire-rs-testing

./: Cargo.toml
src/: main.rs
